[WIP] Webpack tratando do JS.

--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,7 @@
     <div id="wrapper">
       <section class="mainContent projeto-mundo-da-luna">
           ${require('./inc/header.html')}
+          ${require('./inc/banner.html')}
           ${require('./inc/footer.html')}
       </section>
     </div>
