--- a/src/inc/banner.html
+++ b/src/inc/banner.html
@@ -1,4 +1,4 @@
-<div class="slick-carousel">
+<div class="owl-carousel owl-theme nav">
     <div class="banner"><img src="../img/banner.jpg"></div>
     <div class="banner"><img src="../img/banner1.jpg"></div>
     <div class="banner"><img src="../img/banner2.jpg"></div>
