[WIP] Ajustes carrossel e codigo webpack.

--- a/src/inc/banner.html
+++ b/src/inc/banner.html
@@ -1,5 +1,5 @@
 <div class="owl-carousel owl-theme nav">
-    <div class="banner"><img src="../img/banner.jpg"></div>
-    <div class="banner"><img src="../img/banner1.jpg"></div>
-    <div class="banner"><img src="../img/banner2.jpg"></div>
+    <div class="item banner"><img src="../img/banner.jpg"></div>
+    <div class="item banner"><img src="../img/banner1.jpg"></div>
+    <div class="item banner"><img src="../img/banner2.jpg"></div>
 </div>
